# EveApps

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  EveApps.sln  LICENSE.md  README.md  Readme.txt  clean_debug.sh  index.md  tree.txt
EveApps/: CMakeLists.txt
EveApps/DemoAudioPlayback/: Readme.txt
EveApps/DemoAudioPlayback/Hdr/: App.h  DemoAudioPlayback.h
EveApps/DemoAudioPlayback/Project/Msvc/: DemoAudioPlayback_MSVC.sln  DemoAudioPlayback_Msvc.vcxproj
EveApps/DemoAudioPlayback/Project/Msvc_Emulator/: DemoAudioPlayback_Emulator.sln  DemoAudioPlayback_Emulator.vcxproj
EveApps/DemoAudioPlayback/Src/: App.c  DemoAudioPlayback.c
EveApps/DemoAudioPlayback/UI_Assets/convert/: 1_30_8 Bit signed PCM.mov  play_80x80_COMPRESSED_RGBA_ASTC_4x4_KHR.raw
EveApps/DemoCircleView/Hdr/: App.h  DemoCircleView.h
EveApps/DemoCircleView/Project/Msvc/: DemoCircleView_MSVC.sln  DemoCircleView_Msvc.vcxproj
EveApps/DemoCircleView/Project/Msvc_Emulator/: DemoCircleView_Emulator.sln  DemoCircleView_Emulator.vcxproj
EveApps/DemoCircleView/Src/: DemoCircleView.c
EveApps/DemoEvChargePoint/Hdr/: App.h  Authenticate.h  Charging.h  Choose_Language.h  Def.h  Plugin.h  Report.h  Screen_Saver.h
EveApps/DemoEvChargePoint/Project/Msvc/: DemoEvChargePoint_Msvc.vcxproj  DemoEvChargePoint_Msvc.vcxproj.filters
EveApps/DemoEvChargePoint/Project/Msvc_Emulator/: DemoEvChargePoint_Emulator.sln  DemoEvChargePoint_Emulator.vcxproj
EveApps/DemoEvChargePoint/Src/: App.c  Charging.c  Choose_Language.c  Screen_Saver.c  Transtion.c
EveApps/DemoEvChargePoint/UI_Assets/Converted/: ATH_1_TapPoint_518_368_520x368_COMPRESSED_RGBA_ASTC_8x8_KHR.raw  ATH_3_Pay1_146_45_148x48_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  ATH_4_Pay2_76_59_76x60_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  CL2_CircleDE_282x282_COMPRESSED_RGBA_ASTC_6x6_KHR.raw  CL3_CircleCN_282x282_COMPRESSED_RGBA_ASTC_6x6_KHR.raw  PL_3_PlugSocketGreen_180_218_180x220_COMPRESSED_RGBA_ASTC_5x5_KHR.raw  TR_1_SmallCar_600x306_COMPRESSED_RGBA_ASTC_6x6_KHR.raw  TR_2_BatteryBg_3_300x152_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  TR_3_BatteryGreen_38_114_40x116_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  TR_4_BatteryRed_38_114_40x116_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  TR_6_BtnChargeText_24x36_COMPRESSED_RGBA_ASTC_4x4_KHR.raw
EveApps/DemoFlashBitbang/Hdr/: App.h  DemoFlashBitbang.h
EveApps/DemoFlashBitbang/Src/: App.c  DemoFlashBitbang.c
EveApps/DemoGauges/Hdr/: App.h
EveApps/DemoGauges/Src/: App.c  DemoGauges.c
EveApps/DemoGradient/Hdr/: App.h  DemoGradient.h
EveApps/DemoGradient/Src/: App.c  DemoGradient.c
EveApps/DemoGraph/Hdr/: App.h  DemoGraph.h
EveApps/DemoHDPictureViewer/: CMakeLists.txt
EveApps/DemoHDPictureViewer/Hdr/: App.h  DemoHDPictureViewer.h
EveApps/DemoHDPictureViewer/Src/: App.c  DemoHDPictureViewer.c
EveApps/DemoImageviewer/Hdr/: App.h
EveApps/DemoImageviewer/Src/: App.c  DemoImageviewer.c
EveApps/DemoImageviewer2/Hdr/: App.h
EveApps/DemoImageviewer2/Src/: App.c
EveApps/DemoInstrument/Hdr/: App.h
EveApps/DemoInstrument/Src/: DemoInstrument.c
EveApps/DemoJackpot/Hdr/: App.h  DemoJackpot.h
EveApps/DemoJackpot/Src/: App.c
EveApps/DemoKeyboard/Hdr/: App.h
EveApps/DemoKeyboard/Src/: DemoKeyboard.c
EveApps/DemoLift/Hdr/: App.h  DemoLift.h
EveApps/DemoLift/Src/: DemoLift.c
EveApps/DemoLift2/: CMakeLists.txt
EveApps/DemoLift2/Hdr/: App.h  DemoLift2.h  Lift_Control.h  Lift_DisplayPanel.h
EveApps/DemoMainmenu/Hdr/: App.h  DemoMainmenu.h
EveApps/DemoMainmenu/Src/: DemoMainmenu.c
EveApps/DemoMediaPlayer/: CMakeLists.txt
EveApps/DemoMediaPlayer/Hdr/: App.h
EveApps/DemoMediaPlayer/Src/: App.c
EveApps/DemoMetaballs/Hdr/: App.h  DemoMetaballs.h
EveApps/DemoMetaballs/Src/: App.c  DemoMetaballs.c
EveApps/DemoMeter/Hdr/: App.h
EveApps/DemoMeter/Src/: DemoMeter.c
EveApps/DemoRefrigerator/: CMakeLists.txt
EveApps/DemoRefrigerator/Hdr/: App.h
EveApps/DemoRefrigerator/Src/: App.c  DemoRefrigerator.c
EveApps/DemoRotaryDial/Hdr/: App.h
EveApps/DemoRotaryDial/Src/: DemoRotaryDial.c
EveApps/DemoRunningBar/Hdr/: App.h  DemoRunningBar.h
EveApps/DemoRunningBar/Src/: DemoRunningBar.c
EveApps/DemoSignals/Hdr/: App.h  DemoSignals.h
EveApps/DemoSignals/Src/: App.c  DemoSignals.c
EveApps/DemoSignature/Hdr/: App.h  DemoSignature.h
EveApps/DemoSignature/Src/: App.c
EveApps/DemoSketch/Hdr/: App.h  DemoSketch.h
EveApps/DemoSketch/Src/: App.c  DemoSketch.c
EveApps/DemoUnicode/Hdr/: App.h  DemoUnicode.h
EveApps/DemoUnicode/Src/: App.c  DemoUnicode.c
EveApps/DemoUnicodeRuntime/Hdr/: App.h  Common.h  DemoUnicodeRuntime.h  Mmngr.h  Xfont.h
EveApps/DemoUnicodeRuntime/Src/: DemoUnicodeRuntime.c
EveApps/DemoWashingMachine/: CMakeLists.txt
EveApps/DemoWashingMachine/Hdr/: App.h  DemoWashingMachine.h
EveApps/DemoWashingMachine/Src/: App.c  DemoWashingMachine.c
EveApps/SampleApp/: Readme.txt
EveApps/SampleApp/Doc/: Readme.txt  SampleApp.Doxygenconf
EveApps/SampleApp/Hdr/: App.h  Samapp_Enable_API.h  Set_00.h  Set_01.h  Set_02.h  Set_03.h  Set_04.h  Set_05.h  Set_06.h  Set_07.h  Set_08.h  Set_09.h  Set_10.h  Set_11.h  Set_12.h  Set_13.h  Set_14.h
EveApps/SampleApp/Src/: App.c  Set_00.c  Set_01.c  Set_02.c  Set_03.c  Set_04.c  Set_05.c  Set_06.c  Set_07.c  Set_08.c  Set_09.c  Set_10.c  Set_11.c  Set_12.c  Set_13.c  Set_14.c
EveApps/SampleApp/Test/: Set14_sample_vc1dump_1280x800.vc1dump  Set14_sample_vc1dump_800x480.vc1dump  chicken_after.raw  mssong_20.xfont  simkai1.gly  simkai1.xfo  simkai2.gly  simkai2.xfo
common/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_Config.h  EVE_GpuDefs.h  EVE_GpuTypes.h  EVE_Hal.c  EVE_HalDefs.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_MPSSE.c  EVE_HalImpl_MULTI.c  EVE_HalImpl_RP2040.c  EVE_ILI9488_FT9XX.c  EVE_IntTypes.h  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_LoadFile_STDIO.c  EVE_MediaFifo.c  EVE_Platform.h  EVE_Platform_RP2040.h  EVE_Util.c  EVE_Util.h
common/eve_hal/Hdr/: FT_Gpu_Hal.h  Gpu_Hal.h
dependencies/projects/littlefs/: CMakeLists.txt
(+696 files in other folders)
