
FILE(GLOB SRCS ../../littlefs/*.c)
FILE(GLOB HDRS ../../littlefs/*.h)
SOURCE_GROUP("" FILES ${SRCS} ${HDRS})

IF(WIN32 AND ((EVE_APPS_PLATFORM STREQUAL "MULTI") OR (EVE_APPS_GRAPHICS STREQUAL "MULTI")))
  REMOVE_DEFINITIONS(-DLFS_IMPORT)
  ADD_DEFINITIONS(-DLFS_EXPORT)
  ADD_LIBRARY(littlefs SHARED
    ${SRCS}
    ${HDRS}
  )
ELSE()
  ADD_LIBRARY(littlefs
    ${SRCS}
    ${HDRS}
  )
ENDIF()
